--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       var a = 0
       var n = 0
       function IncreaseByPi() {
-      a = a + String(Math.Pi)[n];
+      a = a + String(Math.PI)[n];
       n++;
       document.getElementById("Line").innerHTML = a;
       }
