--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       var a = 0
       var n = 0
       function IncreaseByPi() {
-      a = a+parseInt(String(Math.PI)[n])
+      a = a+parseInt(String(Math.PI)[n]);
       n++;
       document.getElementById("Line").innerHTML = a;
       }
